--- a/springProject/src/main/resources/templates/question/qnaDetail.html
+++ b/springProject/src/main/resources/templates/question/qnaDetail.html
@@ -8,71 +8,80 @@
 <body>
 	<header th:insert="/header"></header>
 	<main class="container">
-	<h1 class="text-center m-5">Q&A</h1>
-	<div class="m-5 w-75 mx-auto">
-	<table class="table mx-auto">
-			<colgroup>
-				<col width="150px;"> 
-				<col width="auto;"> 
-			</colgroup>
-		<thead>
-			<tr>
-				<th class="table-light">상품정보</th>
-				<td>SAMSUNG 노트북</td>
-			</tr>
-			<tr>
-				<th class="table-light">제목</th>
-				<td th:text="${qnaBoard.qnaboard_title}"></td>
-			</tr>
-			<tr>
-				<th class="table-light">작성자</th>
-				<td th:text="${qnaBoard.user_id}"></td>
-			</tr>
-			<tr>
-				<th class="table-light">작성일</th>
-				<td th:text="${#dates.format(qnaBoard.post_time, 'yyyy-MM-dd')}"></td>
-			</tr>	
-		</thead>
-		<tbody>
-			<tr>
-				<td colspan="2">
-					<p class="mt-1 fw-bold">내용</p>			
-					<p class="mt-3" th:text="${qnaBoard.qnaboard_content}"></p>
-				</td>
-			</tr>
-		</tbody>
-		<tfoot>
-			<tr>
-				<td colspan="2">
-					<strong>답변</strong>
-					<p class="mt-3">
-					안녕하세요, 고객님.<br>
-					현재 배송업체에 문의한 결과 배송 착오로 물건이 잘못 도착한 것으로 확인되었습니다.<br>
-					배송 실수로 인한 불편에 대해 사과의 말씀드립니다.<br>
-					상품은 2~3일 이내로 도착할 예정입니다.<br>
-					다시 한 번 불편을 드린 점 사과드립니다.
-					</p>
-					<p>
-					문의사항이 있으시면 언제든지 고객센터>Q&A 또는
-					유선번호 1234-4321번으로 연락주시기바랍니다.
-					감사합니다.
-					</p>
-				</td>
-			</tr>
-			<tr>
-			<td>첨부파일</td>
-			<td>파일명</td>
-			</tr>
-		</tfoot>
-	</table>
-	</div>
-	<div class="d-flex justify-content-end" style="margin:-20px 150px 100px 0;">
-		<a class="btn btn-outline-primary" th:href="@{/question/qnaList/1}">목록</a>
-		<div class="ms-1" th:if="${session.loginUser?.user_id==qnaBoard.user.user_id}">
-			<a class="btn btn-outline-secondary" th:href="@{/question/updateQna/{no}(no=${qnaBoard.qnaboard_no})}">수정</a>
-			<a class="btn btn-outline-danger" th:href="@{/question/deleteQna/{no}/{userId}(no=${qnaBoard.qnaboard_no},userId=${qnaBoard.user.user_id})}">삭제</a>
+		<h1 class="text-center m-5">Q&A</h1>
+		<div class="m-5 w-75 mx-auto">
+			<table class="table mx-auto">
+					<colgroup>
+						<col width="150px;"> 
+						<col width="auto;"> 
+					</colgroup>
+				<thead>
+					<tr>
+						<th class="table-light">상품정보</th>
+						<td>SAMSUNG 노트북</td>
+					</tr>
+					<tr>
+						<th class="table-light">제목</th>
+						<td th:text="${qnaBoard.qnaboard_title}"></td>
+					</tr>
+					<tr>
+						<th class="table-light">작성자</th>
+						<td th:text="${qnaBoard.user_id}"></td>
+					</tr>
+					<tr>
+						<th class="table-light">작성일</th>
+						<td th:text="${#dates.format(qnaBoard.post_time, 'yyyy-MM-dd')}"></td>
+					</tr>	
+				</thead>
+				<tbody>
+					<tr>
+						<td colspan="2">
+							<p class="mt-1 fw-bold">내용</p>			
+							<p class="mt-3" th:text="${qnaBoard.qnaboard_content}"></p>
+						</td>
+					</tr>
+				</tbody>
+				<!-- <tfoot>
+					<tr>
+						<td colspan="2">
+							<strong>답변</strong>
+							<p class="mt-3">
+							안녕하세요, 고객님.<br>
+							현재 배송업체에 문의한 결과 배송 착오로 물건이 잘못 도착한 것으로 확인되었습니다.<br>
+							배송 실수로 인한 불편에 대해 사과의 말씀드립니다.<br>
+							상품은 2~3일 이내로 도착할 예정입니다.<br>
+							다시 한 번 불편을 드린 점 사과드립니다.
+							</p>
+							<p>
+							문의사항이 있으시면 언제든지 고객센터>Q&A 또는
+							유선번호 1234-4321번으로 연락주시기바랍니다.
+							감사합니다.
+							</p>
+						</td>
+					</tr>
+					<tr>
+					<td>첨부파일</td>
+					<td>파일명</td>
+					</tr>
+				</tfoot> -->
+			</table>
 		</div>
-	</div>
+		<div class="d-flex justify-content-end" style="margin:-20px 150px 100px 0;">
+			<a class="btn btn-outline-primary" th:href="@{/question/qnaList/1}">목록</a>
+			<div class="ms-1" th:if="${session.loginUser?.user_id==qnaBoard.user.user_id}">
+				<a class="btn btn-outline-secondary" th:href="@{/question/updateQna/{no}(no=${qnaBoard.qnaboard_no})}">수정</a>
+				<a class="btn btn-outline-danger" th:href="@{/question/deleteQna/{no}/{userId}(no=${qnaBoard.qnaboard_no},userId=${qnaBoard.user.user_id})}">삭제</a>
+			</div>
+		</div>
+		<div class="m-5 w-75 mx-auto">
+			<form action="">
+				<div class="d-flex flex-row justify-content-center">
+					<input class="form-control-plaintext text-center boder boder-success" name="user_id" th:value="${qnaBoard.user.user_id}" readonly style="width: 120px;">
+					<textarea class="form-control ms-1"></textarea>
+					<button type="submit" class="btn btn-outline-primary ms-1">댓글 등록</button>
+				</div>
+			</form>
+		</div>
 	</main>
 	<footer th:insert="/footer"></footer>
 </body>
