--- a/springProject/src/main/resources/templates/review/userReviewList.html
+++ b/springProject/src/main/resources/templates/review/userReviewList.html
@@ -31,6 +31,8 @@ margin-right: 20px;
 		<ol class="list-group w-50" style="margin-left:300px">
 			<li class="list-group-item d-flex flex-column justify-content-evenly align-items-start" th:each="review : ${reviews}">
 			    <div class="ms-2 me-auto">
+			    	<input type="text" th:value="${review.review_no}">
+			    	<input type="text" th:value="${review.user_id}">
 			      <p class="fw-bold" th:text="${review.review_title}"></p>
 					<span>별점 :
 						<span  class="badge bg-primary rounded-pill" >
@@ -42,7 +44,7 @@ margin-right: 20px;
 					<p class="mt-3" th:text="${review.review_content}"></p>
 				</div>
 				<div class="ms-auto align-items-end">
-					<button class="btn btn-sm btn-outline-primary me-2">수정</button>
+					<a class="btn btn-sm btn-outline-primary me-2" th:href="@{/review/userReviewUpdate/{reviewNo}(reviewNo=${review.review_no})}">수정</a>
 					<button class="btn btn-sm btn-outline-danger">삭제</button>
 				</div>
 			</li>
